# ssi-v2

./: .env.example  .gitignore  BACKUP.md  README.md  pyproject.toml
data/prompts/: exp4_sample.csv  prompts.csv
scripts/: analyze_exp4.py  api_smoke.py  make_blog_figures.py  run_exp4.py  smoke_test.py
