[project]
name = "ssi-v2"
version = "0.1.0"
description = "SSI v2: safety eval reliability under production inference conditions"
requires-python = ">=3.10,<3.13"
dependencies = [
    # API-track deps (runnable on laptop — Experiment 4)
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",

    # Data / analysis (light, cross-platform)
    "pandas==2.2.0",
    "numpy==1.26.4",
    "tqdm==4.66.4",
    "pyyaml==6.0.2",
    "requests==2.32.0",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "scikit-learn==1.5.0",
    "scipy==1.13.0",
    "datasets==2.18.0",
]

[project.optional-dependencies]
# GPU-only extras — installed on Lambda Cloud, NOT on the laptop.
# Pins match SSI v1 (requirements.txt) for reproducibility.
cloud = [
    "vllm==0.6.3",
    "torch==2.4.0",
    "transformers==4.46.0",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "jupyter==1.0.0",
    "ipykernel==6.29.5",
]
